# conveneAI

./: .env.example  .gitignore  CLAUDE.md  DeepGramClient.py  OpenRouterClient.py  README.md  VentanaKeys.py  VentanaPrincipal.py  instrumentation.ts  m4a-repro.tmp.ts  main.py  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  requirements.txt  tsconfig.json  utils.py  vitest.config.ts
QA/: .env.example  main.py
app/: globals.css  layout.tsx  page.tsx
components/: action-items-sidebar.tsx  app-header.tsx  auth-form.tsx  chat-window.tsx  folder-combobox.tsx  history-list.test.tsx  history-list.tsx  model-picker.tsx  org-fab.tsx  org-gate.tsx  org-kanban-board.tsx  org-manage-panel.tsx  org-recording-workspace.tsx  org-workspace.tsx  organizations-list.tsx  queue-dashboard.tsx  recording-workspace.tsx  settings-form.tsx  transcript-panel.tsx  upload-zone.tsx  user-nav.tsx
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: api.rs  audio.rs  capture.rs  config.rs  encoder.rs  hotkey.rs  lib.rs  main.rs  notifications.rs  recorder.rs  tray.rs
docs/: PRD-asisvoz.md  PRD-conveneai.md
infra/: README.md  commands.md  database.md  nginx-asisvoz.conf  server-layout.md
lib/: action-extractor.test.ts  action-extractor.ts  api-path.ts  audio-files.ts  audio-split.test.ts  audio-split.ts  auth.test.ts  auth.ts  chatbot.ts  (+35 more)
(+93 files in other folders)
